Fixed layout issues.

--- a/src/app/elements/ivx-simple-authorize/ivx-simple-authorize.scss
+++ b/src/app/elements/ivx-simple-authorize/ivx-simple-authorize.scss
@@ -4,7 +4,6 @@
 }
 
 #outerWrapper {
-  width: 50%;
 
   #fabWrapper {
     padding-top: 1rem;
